--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,58 @@
-﻿
+﻿html, body {
+  margin: 0;
+  padding: 0; }
+
+body {
+  position: relative;
+  height: 100%;
+  background-color: #d3e4e9;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px; }
+
+.app header {
+  height: 100px;
+  line-height: 100px; }
+  .app header h1 {
+    color: #638284;
+    font-size: 22px;
+    margin: 0; }
+
+.app .container {
+  width: 1000px;
+  position: relative;
+  margin: 0 auto; }
+
+.app main #headline {
+  background-color: #c0d7de;
+  padding: 5px 0; }
+  .app main #headline h2 {
+    font-size: 19px;
+    margin: 0;
+    color: #638284; }
+
+.app main #actionButtons {
+  margin: 30px 0; }
+  .app main #actionButtons button {
+    color: white;
+    background-color: #ed772f;
+    padding: 10px 15px;
+    border-radius: 2px;
+    margin-right: 15px;
+    border: none;
+    cursor: pointer; }
+
+.app main #userList table {
+  width: 100%; }
+  .app main #userList table thead tr {
+    background-color: #c0d7de; }
+    .app main #userList table thead tr td {
+      padding: 10px 5px;
+      font-weight: bold;
+      border: none;
+      color: #3c6161;
+      font-size: 13px; }
+  .app main #userList table tbody tr:nth-child(even) {
+    background: #eaf2f4; }
+  .app main #userList table tbody tr:nth-child(odd) {
+    background: #dde9ec; }
+
