--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,2 +1,89 @@
-﻿body {
+﻿$colorHead:#638284;
+$colorTitle:#3c6161;
+$bgColor1:#c0d7de;
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    position: relative;
+    height: 100%;
+    background-color: #d3e4e9;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+}
+
+.app {
+    header {
+        height: 100px;
+        line-height: 100px;
+
+        h1 {
+            color: $colorHead;
+            font-size: 22px;
+            margin: 0;
+        }
+    }
+
+    .container {
+        width: 1000px;
+        position: relative;
+        margin: 0 auto;
+    }
+
+    main {
+
+        #headline {
+            background-color:$bgColor1;
+            padding:5px 0;
+            h2 {
+                font-size: 19px;
+                margin: 0;
+                color: $colorHead;
+            }
+        }
+
+        #actionButtons {
+            margin:30px 0;
+            button {
+                color:white;
+                background-color: #ed772f;
+                padding: 10px 15px;
+                border-radius: 2px;
+                margin-right: 15px;
+                border:none;
+                cursor:pointer;
+            }
+        }
+
+        #userList {
+            table {
+                width:100%;
+                thead {
+                    tr {
+                        background-color: $bgColor1;
+                        td{
+                            padding:10px 5px;
+                            font-weight:bold;
+                            border:none;
+                            color:$colorTitle;
+                            font-size:13px;
+                        }
+                    }
+                }
+
+                tbody {
+                    tr:nth-child(even) {
+                        background: #eaf2f4;
+                    }
+
+                    tr:nth-child(odd) {
+                        background: #dde9ec;
+                    }
+                }
+            }
+        }
+    }
 }
